--- a/docs/01.one/软件使用指南.md
+++ b/docs/01.one/软件使用指南.md
@@ -8,9 +8,9 @@ permalink: /pages/24768e/
 
 ⚗️ 功能亮点：
 - 上课学习、工作培训，直播过程记下笔记让你学到更多
-- 截图识字让你花更少时间记笔记，更多时间专注直播
-- 使用简洁强大的markdown帮助你更好地记笔记
-- 支持导出功能，一键保存你的知识记录（功能开发中）
+- 截图识字让你省时省力完成笔记，更多时间专注直播
+- 使用简洁强大的markdown增强你的笔记体验
+- 支持导出word文档功能，一键保存你的知识财富
 
 ## 安装依赖
 
@@ -52,23 +52,28 @@ npm start
 
 直播中各个功能按键在官方文档中已有详细说明，我们主要介绍我们设计的特色功能：
 
-1. 笔记功能
+#### 1. 笔记功能
 
-   点击小工具栏的笔记框，页面会从上下左右中的一边打开笔记框。小工具栏中也有设置默认打开笔记框位置的按钮。
+   - 位置自由：点击小工具栏的笔记框，页面可以从“**上、下、左、右**”中任意一边打开笔记框，只需点击小工具栏中的按钮自行设置。
+   - 形式多样：该笔记框基于markdown应用程序，集成了文本编辑中 **“加粗”“斜体”“列表”“图片”** 等实用化操作，功能强大，使用便利。
+   - 存储方便：笔记框在编辑过程中实时保存，不易丢失，直播课结束后可**一键保存**至本地。
 
-2. 截图识字功能
+#### 2. 截图识字功能
 
-   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”和“识别”三个按钮分别代表着关闭截图框，保存截图到剪贴板和识别截图中的文字内容并保存到剪贴板。
+   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”和“识别”三个按钮分别代表着“关闭截图框”、“保存截图到剪贴板”和“识别截图中的文字内容并保存到剪贴板”，轻松抓取直播课程重点，避免遗漏以及繁复操作。
 
-3. 搜索功能
+#### 3. 搜索功能
 
-   我们工具栏中提供了两个快捷搜索引擎百度和必应来帮助用户得到更好的笔记体验。
+   工具栏中提供了两个快捷搜索引擎**百度**和**必应**来帮助用户实时搜索直播课堂中的疑难困惑。
 
-4. 换肤功能
+#### 4. 换肤功能
 
-   点击右上角的切换按钮可以切换日间和夜晚两种主题。
+   点击右上角的切换按钮可以切换**日间**和**夜晚**两种主题颜色，根据环境轻松变换视觉效果，缓解直播课堂的倦怠感。
 
+#### 5. 意见反馈
 
+   笔记框功能不够多？使用不够流畅？用户体验感不够舒适？
+   欢迎各位点击导航栏的“意见反馈”按钮，简单邮件，三言两语，告诉我们您的用户建议吧！不开心就来soul团队虔诚为您服务~
 
 ## 帮助与反馈
 
