--- a/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
+++ b/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
@@ -36,9 +36,8 @@
 
  
 
-| ![](image/wps1.jpg) | ![](image/wps2.jpg) |
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQf58a5312f0b626d83226d2033dc1bb7b.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_10,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_10,x_7,y_7,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)   |   ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ813ea55bcb52f0f72cd48051b96795b0.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_10,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_10,x_7,y_7,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)   |
 | ------------------- | ------------------- |
-|                     |                     |
 
  
 
@@ -64,7 +63,7 @@
 
 **实现**：
 
-| ***\*![](image/wps5.jpg)\**** | ***\*![](image/wps6.jpg)\**** |
+| ***\*![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe87db5b069bdc6449674768343458abf.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_10,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_10,x_7,y_7,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)\**** | ***\*![](image/wps6.jpg)\**** |
 | ----------------------------- | ----------------------------- |
 | ***\*![](image/wps7.jpg)\**** | ***\*![](image/wps8.jpg)\**** |
 
@@ -139,9 +138,9 @@
 |          | 张孙文   | 直播软件功能分析、前端页面学习                               |
 |          | 郑彤敏   | 直播软件项目基本构成学习                                     |
 | 中期     | 李宏基   | 确定直播主题方案、分配任务，直播软件中的md笔记框、截图、识字设计和开发 |
-|          | 李津津   | 前端页面样式设计，页面图片、字体等样式设计，页面布局设计     |
-|          | 张孙文   | 直播软件中的工具栏、笔记框、页面抽屉设计和开发               |
-|          | 郑彤敏   | 作品logo设计和制作，前端页面样式设计，轮播图、模式转换设计和实现，页面布局设计 |
+|          | 李津津   | 前端页面样式设计，页面图片、字体等样式设计，页面布局设计，笔记一键导出功能实现     |
+|          | 张孙文   | 直播软件中的工具栏、笔记框、页面抽屉设计和开发，一键邮箱功能设计及实现               |
+|          | 郑彤敏   | 作品logo设计和制作，前端页面样式设计，轮播图、模式转换设计和实现，页面布局设计，笔记一键导出功能实现，菜单栏设计 |
 | 后期     | 李宏基   | 拼接和汇总直播软件功能，应用测试排错，程序打包成应用，操作指南编写 |
 |          | 李津津   | 制作直播软件功能展示海报，编写直播软件设计方案文档，应用测试排错 |
 |          | 张孙文   | 拼接前端开发页面样式、编写直播软件设计方案文档，应用测试排错 |
