--- a/docs/01.one/软件使用指南.md
+++ b/docs/01.one/软件使用指南.md
@@ -54,13 +54,13 @@ npm start
 
 #### 1. 笔记功能
 
-   - 位置自由：点击小工具栏的笔记框，页面可以从“**上、下、左、右**”中任意一边打开笔记框，只需点击小工具栏中的按钮自行设置。
-   - 形式多样：该笔记框基于markdown应用程序，集成了文本编辑中 **“加粗”“斜体”“列表”“图片”** 等实用化操作，功能强大，使用便利。
-   - 存储方便：笔记框在编辑过程中实时保存，不易丢失，直播课结束后可**一键保存**至本地。
+   - 位置：点击小工具栏的笔记框，页面可以从“**上、下、左、右**”中任意一边打开笔记框，只需点击小工具栏中的按钮自行设置。
+   - 样式：该笔记框基于markdown应用程序，集成了文本编辑中 **“加粗”“斜体”“列表”“图片”** 等操作，只需根据个人喜好在笔记框工具栏选择或使用快捷键，
+   - 存储：点击笔记框保存按钮或者ctrl+S快捷键**一键保存**至本地。
 
 #### 2. 截图识字功能
 
-   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”和“识别”三个按钮分别代表着“关闭截图框”、“保存截图到剪贴板”和“识别截图中的文字内容并保存到剪贴板”，轻松抓取直播课程重点，避免遗漏以及繁复操作。
+   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”和“识别”三个按钮分别代表着“关闭截图框”、“保存截图到剪贴板”和“识别截图中的文字内容并保存到剪贴板”。
 
 #### 3. 搜索功能
 
@@ -68,12 +68,11 @@ npm start
 
 #### 4. 换肤功能
 
-   点击右上角的切换按钮可以切换**日间**和**夜晚**两种主题颜色，根据环境轻松变换视觉效果，缓解直播课堂的倦怠感。
+   点击右上角的切换按钮可以切换**日间**和**夜晚**两种主题颜色，轻松变换视觉效果，缓解直播课堂的倦怠感。
 
 #### 5. 意见反馈
 
-   笔记框功能不够多？使用不够流畅？用户体验感不够舒适？
-   欢迎各位点击导航栏的“意见反馈”按钮，简单邮件，三言两语，告诉我们您的用户建议吧！不开心就来soul团队虔诚为您服务~
+   点击导航栏的**意见反馈按钮** ，输入讯息，简单**邮件**，三言两语，告诉我们您的用户建议吧！不开心就来soul团队虔诚为您服务~
 
 ## 帮助与反馈
 
