--- a/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
+++ b/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
@@ -89,7 +89,37 @@
 
  
 
-##### ⑤【用户页面风格切换】
+##### ⑤【笔记内容一键导出】
+
+**优势**：
+
+为了方便用户将笔记内容及时转移以供下次使用，本产品提供了一键导出笔记框中所做笔记的内容，极大避免了利用复制粘贴转移笔记不方便、格式被打乱甚至错误的问题。
+**实现**：
+
+ 
+
+| ***\*![](image/wps12.jpg)\**** |
+| ------------------------------ |
+| ****![](image/wps13.jpg)****   |
+
+##### ⑥【一键邮箱反馈意见】
+
+**优势**：
+
+为了及时找出并更正网页bug以及继续完善产品外观、功能等，本产品提供了一键邮件发送反馈，用户只需点击反馈意见按钮，即会自动打开邮箱，用户只需登录邮箱、书写反馈信息、然后点击发送，反馈信息即会发送到指定的邮箱，工作人员将会及时查收并作出响应。
+
+**实现**：
+
+ 
+
+| ***\*![](image/wps12.jpg)\**** |
+| ------------------------------ |
+| ****![](image/wps13.jpg)****   |
+
+
+
+
+##### ⑦【用户页面风格切换】
 
 **优势**：
 
@@ -103,9 +133,8 @@
 | ------------------------------ |
 | ****![](image/wps13.jpg)****   |
 
- 
 
-##### ⑥【登录页展示作品特色功能】
+##### ⑧【登录页展示作品特色功能】
 
 **优势**：
 
@@ -119,15 +148,11 @@
 
  
 
-#### 2、开放中的功能：
+#### 2、开发中的功能：
 
-***\*①\****基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出
+***\*①\****对授课人提供的学习网站进行一键收藏
 
-***\*②\****对产品使用问题的一键实时反馈
-
-***\*③\****对授课人提供的学习网站进行一键收藏
-
-***\*④\****直播软件的页面样式设计权限下发用户
+***\*②\****直播软件的页面样式设计权限下发用户
 
 ### 四、团队分工
 
@@ -164,7 +189,7 @@
 
 #### 4.后期工作：
 
-​       基于团队的设计方案，继续完善在直播软件基础功能上打造的创新性功能，积极排bug，同时逐步设计和实现正在开放中的功能：a).基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出，方便用户对笔记的及时保存、分享等操作；b).对产品使用问题的一键实时反馈，设置程序报错机制，及时捕获出程序使用时产生的错误，并实时反映给用户，用户进行一键反馈；c).对授课人提供的学习网站进行一键收藏，针对于用户对学习网站的需求，产品提供了一键收藏学习网站链接，可以连续、多次进行一键收藏，打造用户学习资源库；d)直播软件的页面样式设计权限下发用户，为了更好地迎合广大学生对线上直播授课观看的需求，产品将页面样式设计权限下发用户，让用户设计更符合自己个人喜好的页面样式，改善直播观看的体验感，真正做到”怎么好就怎么来“。
+​       基于团队的设计方案，继续完善在直播软件基础功能上打造的创新性功能，积极排bug，同时逐步设计和实现正在开放中的功能：a).对授课人提供的学习网站进行一键收藏，针对于用户对学习网站的需求，产品提供了一键收藏学习网站链接，可以连续、多次进行一键收藏，打造用户学习资源库；b)直播软件的页面样式设计权限下发用户，为了更好地迎合广大学生对线上直播授课观看的需求，产品将页面样式设计权限下发用户，让用户设计更符合自己个人喜好的页面样式，改善直播观看的体验感，真正做到”怎么好就怎么来“。
 
  
 
