--- a/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
+++ b/docs/01.one/”直播+升级小课堂”软件设计作品方案.md
@@ -16,11 +16,9 @@
 
 #### 1、基础功能：
 
-①聊天框：欢迎语、点赞、送礼、送花、聊天信息、只看主持人、设置昵称、连接超时提醒、在线列表、提问、打赏等功能    
+①聊天框：欢迎语、送礼、送花、聊天信息、只看主持人、设置昵称、连接超时提醒、在线列表、提问等功能    
 
 ②播放器：音量设置、暂停/恢复播放、切换倍速、关闭或显示讲师摄像头、切换当前线路  PPT翻页、发送弹幕、隐藏/恢复弹幕、切换清晰度(需支持多码率)、支持回放          无延迟播放、连麦等功能    
-
-③互动功能：公告、 签到、 答题卡、 问卷、 抽奖、 卡片推送、条件抽奖等功能          
 
  
 
@@ -34,13 +32,9 @@
 
 **实现**：
 
- 
-
-| ![](image/wps1.jpg) | ![](image/wps2.jpg) |
-| ------------------- | ------------------- |
-|                     |                     |
-
- 
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe11fa1fe9fc309b494c07643aa94911f.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_25,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_25,x_17,y_17,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ3fc681e9479d7519b22acfa9e2563891.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|                                                                                                                                                                                                                                                                                                                  |                                                                                                                                                                                                                                                                                                                  |
 
 ##### ②【识别并提取屏幕文字】
 
@@ -50,13 +44,26 @@
 
 **实现**：
 
-| ![](image/wps3.jpg) | ![](image/wps4.png) |
-| ------------------- | ------------------- |
-|                     |                     |
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe11fa1fe9fc309b494c07643aa94911f.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_25,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_25,x_17,y_17,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ49c8f3bd0b6b4b2b645cdb9fa10625aa.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|                                                                                                                                                                                                                                                                                                                  |                                                                                                                                                                                                                                                                                                                  |
 
  
 
-##### ③【小窗口实时搜索】
+##### ③【截取文字实时翻译】
+
+**优势：**
+
+为丰富快捷键截取屏幕的功能，同时解决学生遇到需要翻译的句子转移到线上翻译网站等不方便的问题，本产品提供了快捷键截取图片并对图片中的文字进行翻译的功能，让学生更加方便快捷地随时进行语句翻译，同时提高对英语学习的兴趣。
+
+**实现：**
+
+| ![https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe11fa1fe9fc309b494c07643aa94911f.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_25,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_25,x_17,y_17,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe11fa1fe9fc309b494c07643aa94911f.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_25,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_25,x_17,y_17,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ421fe4ca8984579a2d0a275b4ac5731a.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+
+
+
+##### ④【小窗口实时搜索】
 
 **优势**：
 
@@ -64,13 +71,13 @@
 
 **实现**：
 
-| ***\*![](image/wps5.jpg)\**** | ***\*![](image/wps6.jpg)\**** |
-| ----------------------------- | ----------------------------- |
-| ***\*![](image/wps7.jpg)\**** | ***\*![](image/wps8.jpg)\**** |
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ1e95846a521c2b3bfc4e291d8dddd830.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_28,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_28,x_18,y_18,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ986211a68d2f29e427b9588637869243.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_11,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_11,x_7,y_7,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)        |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ94ed7031697eed15ae470454eb986563.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_26,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_26,x_18,y_18,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQbc693c9ad6c269a6770d28617f893f45.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_28,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_28,x_19,y_19,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)\**** |
 
  
 
-##### ④【基于Markdowm插件笔记框】
+##### ⑤【基于Markdowm插件笔记框】
 
 **优势**：
 
@@ -80,17 +87,38 @@
 
 **实现**：
 
-| ![](image/wps9.jpg)          | ![](image/wps10.jpg) |
-| ---------------------------- | -------------------- |
-| ****![](image/wps11.jpg)**** |                      |
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ2718c8068c7984f4e694ea66bcbbad22.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ5b2a9e55bafaca1eb8e5cd45991a448a.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 
  
 
- 
+#####  ⑥【笔记内容一键导出】
 
- 
+**优势** ：
 
-##### ⑤【用户页面风格切换】
+为了方便用户将笔记内容及时转移以供下次使用，本产品提供了一键导出笔记框中所做笔记的内容，极大避免了利用复制粘贴转移笔记不方便、格式被打乱甚至错误的问题。
+
+**实现：**
+
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQf728fbf0cab1c509030fd538457bc3a1.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_21,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_21,x_14,y_14,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQd9409947e82b527c9313ad329c2c1e03.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_67,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_67,x_45,y_45,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+
+
+
+##### ⑦【一键邮箱反馈意见】
+
+**优势：**
+
+为了及时找出并更正网页bug以及继续完善产品外观、功能等，本产品提供了一键邮件发送反馈，用户只需点击反馈意见按钮，即会自动打开邮箱，用户只需登录邮箱、书写反馈信息、然后点击发送，反馈信息即会发送到指定的邮箱，工作人员将会及时查收并作出响应。
+
+**实现：**
+
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQebd574e79bc894e0ace8f0400358df7d.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+
+
+
+##### ⑧【用户页面风格切换】
 
 **优势**：
 
@@ -100,52 +128,53 @@
 
  
 
-| ***\*![](image/wps12.jpg)\**** |
-| ------------------------------ |
-| ****![](image/wps13.jpg)****   |
+| ***\*![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ12a3a04d509aed5704fc1aeeb0dda37d.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)\**** |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ****![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQ2ea3d25b66d6687eb52341b0308fe9a3.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1)****   |
 
  
 
-##### ⑥【登录页展示作品特色功能】
+##### ⑨【登录页展示作品特色功能】
 
 **优势**：
 
 为了彰显产品特色，团队根据自身特色自行设计了产品logo、产品特色功能展示海报，并利用轮播图进行循环展示，让用户能够准确地、更便捷地了解到本产品的特色，整个页面的样式清新、别致，更加符合广大学生的品味，迎合他们的需求，达到很好的宣传和品牌打造等作用。
 
-**实现**：
+**实现**
 
-***\*![](image/wps14.png)\**** 
+| ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQdd2b703517cedcd80af5aa3765e2f05d.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) | ![](https://b0.bdstatic.com/ugc/5lQO1rJZoQVs3os7BDpcDQe55d65b062e4ec2ad13d3be28c90cdde.jpg?x-bce-process=image/watermark,image_NDU0ZjAyZDU5YjQ1LnBuZw==,bucket_searchbox,w_58,text_QOazvOeJjOaCoDUy,type_RlpMYW5UaW5nSGVp,size_58,x_38,y_38,interval_4,color_FFFFFF,effect_softoutline,shc_000000,blr_2,align_1) |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 
  
 
  
 
-#### 2、开放中的功能：
+#### 3、开发中的功能：
 
-***\*①\****基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出
+①基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出
 
-***\*②\****对产品使用问题的一键实时反馈
+②对授课人提供的学习网站进行一键收藏
 
-***\*③\****对授课人提供的学习网站进行一键收藏
+③直播软件的页面样式设计权限下发用户
 
-***\*④\****直播软件的页面样式设计权限下发用户
+④点击翻译按键时截图画布不能正常退出以做出响应，需要进一步完善
 
 ### 四、团队分工
 
-| **时间** | **人员** | ***负责内容***                                               |
-| -------- | -------- | ------------------------------------------------------------ |
-| 前期     | 李宏基   | 安排个人任务、制定工作计划、参与成员各项工作                 |
-|          | 李津津   | 直播软件项目基本构成学习                                     |
-|          | 张孙文   | 直播软件功能分析、前端页面学习                               |
-|          | 郑彤敏   | 直播软件项目基本构成学习                                     |
-| 中期     | 李宏基   | 确定直播主题方案、分配任务，直播软件中的md笔记框、截图、识字设计和开发 |
-|          | 李津津   | 前端页面样式设计，页面图片、字体等样式设计，页面布局设计     |
-|          | 张孙文   | 直播软件中的工具栏、笔记框、页面抽屉设计和开发               |
-|          | 郑彤敏   | 作品logo设计和制作，前端页面样式设计，轮播图、模式转换设计和实现，页面布局设计 |
-| 后期     | 李宏基   | 拼接和汇总直播软件功能，应用测试排错，程序打包成应用，操作指南编写 |
-|          | 李津津   | 制作直播软件功能展示海报，编写直播软件设计方案文档，应用测试排错 |
-|          | 张孙文   | 拼接前端开发页面样式、编写直播软件设计方案文档，应用测试排错 |
-|          | 郑彤敏   | 直播页面的最终设计和布置调整，及时处理修正错误页面样式和布局，应用测试排错 |
+| **时间** | **人员** | ***负责内容***                                                                                                  |
+| -------- | -------- | --------------------------------------------------------------------------------------------------------------- |
+| 前期     | 李宏基   | 安排个人任务、制定工作计划、参与成员各项工作                                                                    |
+|          | 李津津   | 直播软件项目基本构成学习                                                                                        |
+|          | 张孙文   | 直播软件功能分析、前端页面学习                                                                                  |
+|          | 郑彤敏   | 直播软件项目基本构成学习                                                                                        |
+| 中期     | 李宏基   | 确定直播主题方案、分配任务，直播软件中的md笔记框、截图、识字设计和开发，文字翻译                                |
+|          | 李津津   | 前端页面样式设计，页面图片、字体等样式设计，页面布局设计，笔记一键导出功能实现                                  |
+|          | 张孙文   | 直播软件中的工具栏、笔记框、页面抽屉设计和开发，一键邮箱功能设计及实现                                          |
+|          | 郑彤敏   | 作品logo设计和制作，前端页面样式设计，轮播图、模式转换设计和实现，页面布局设计,笔记一键导出功能实现，菜单栏设计 |
+| 后期     | 李宏基   | 拼接和汇总直播软件功能，应用测试排错，程序打包成应用，操作指南编写                                              |
+|          | 李津津   | 制作直播软件功能展示海报，编写直播软件设计方案文档，应用测试排错                                                |
+|          | 张孙文   | 拼接前端开发页面样式、编写直播软件设计方案文档，应用测试排错                                                    |
+|          | 郑彤敏   | 直播页面的最终设计和布置调整，及时处理修正错误页面样式和布局，应用测试排错                                      |
 
  
 
@@ -161,11 +190,14 @@
 
 #### 3.功能综述：
 
-​        本产品除了提供直播软件基础的聊天框、播放器、互动等方面的功能外，还创新性打造了快捷键ctr+shift+v截取屏幕、识别并提取屏幕文字、小窗口实时搜索、基于Markdowm插件笔记框、登录页展示作品特色等功能，基于一名大学生在观看直播授课遇到的各种问题，用用户的思维去考虑、设计和实现产品的功能，在丰富产品的功能的同时，增强了产品的竞争优势和市场适应性。
+​        本产品除了提供直播软件基础的聊天框、播放器、互动等方面的功能外，还创新性打造了快捷键ctr+shift+v截取屏幕、识别并提取屏幕文字、翻译、小窗口实时搜索、基于Markdowm插件笔记框、登录页展示作品特色等功能，基于一名大学生在观看直播授课遇到的各种问题，用用户的思维去考虑、设计和实现产品的功能，在丰富产品的功能的同时，增强了产品的竞争优势和市场适应性。
 
 #### 4.后期工作：
 
-​       基于团队的设计方案，继续完善在直播软件基础功能上打造的创新性功能，积极排bug，同时逐步设计和实现正在开放中的功能：a).基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出，方便用户对笔记的及时保存、分享等操作；b).对产品使用问题的一键实时反馈，设置程序报错机制，及时捕获出程序使用时产生的错误，并实时反映给用户，用户进行一键反馈；c).对授课人提供的学习网站进行一键收藏，针对于用户对学习网站的需求，产品提供了一键收藏学习网站链接，可以连续、多次进行一键收藏，打造用户学习资源库；d)直播软件的页面样式设计权限下发用户，为了更好地迎合广大学生对线上直播授课观看的需求，产品将页面样式设计权限下发用户，让用户设计更符合自己个人喜好的页面样式，改善直播观看的体验感，真正做到”怎么好就怎么来“。
+​       基于团队的设计方案，继续完善在直播软件基础功能上打造的创新性功能，积极排bug，同时逐步设计和实现正在开放中的功能：
+- 基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出，方便用户对笔记的及时保存、分享等操作； (已完成)
+- 对授课人提供的学习网站进行一键收藏，针对于用户对学习网站的需求，产品提供了一键收藏学习网站链接，可以连续、多次进行一键收藏，打造用户学习资源库；
+- 直播软件的页面样式设计权限下发用户，为了更好地迎合广大学生对线上直播授课观看的需求，产品将页面样式设计权限下发用户，让用户设计更符合自己个人喜好的页面样式，改善直播观看的体验感，真正做到”怎么好就怎么来“。
 
  
 
