--- a/docs/01.one/软件介绍.md
+++ b/docs/01.one/软件介绍.md
@@ -6,15 +6,25 @@
 
 - 轮播图：介绍直播产品的特色功能，自行设计的富含创意的功能，用于宣传和推广产品
 
-- Logo/作品名：logo根据团队特色自行设计，由一个不开心的手绘表情以及队名的中英文构成，作品为”不开心就来Soul“，英文为“Come to soul if unhappy”
+- Logo/作品名：logo根据团队特色自行设计，由一个不开心的手绘表情以及队名的中英文构成，作品为“不开心喊你做笔记”
 
- 
+ <style>
+.center 
+{
+  width: auto;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 
 ## 直播观看界面
 
 ### 直播基础功能
 
 我们参考和使用了保利威官方的直播Web SDK和示例方案，修改了部分功能，并且创新性地提出集笔记，截图识字功能于一体的适用于广大用户的新型直播，以下是我们的功能介绍。
+<div class="center">
+
 
 | 分类     | 功能                     | 支持情况 |
 | -------- | ------------------------ | -------- |
@@ -54,6 +64,7 @@
 |          | 自定义图文菜单           | ✔        |
 |          | 直播间状态显示           | ✔        |
 |          | 纯回放模式               | ✔        |
+</div>
 
 ### 直播特色功能
 
@@ -61,7 +72,7 @@
 
 A)问题：为了能让服务受众能够解决做笔记难以赶上授课人PPT换页速度造成学习记录效果差、以及依靠外部软件进行截取屏幕不方便等问题
 
- 本产品提供了快捷键截取屏幕、识别屏幕文字的功能，可以随时通过ctr+shift+V对直播画面进行截图，截图会自动保存到服务受众的粘贴板上，同时也可以识别直播画面中的内容，对文字进行识别和提取，提取的文字会自动保存到服务受众的粘贴板上
+ 本产品提供了快捷键截取屏幕、识别屏幕文字的功能，可以随时通过ctr+shift+V对直播画面进行截图，截图会自动保存到服务受众的粘贴板上，同时也可以识别直播画面中的内容，对文字进行识别和翻译，得到的结果会自动保存到服务受众的粘贴板上
 
  
 
@@ -89,8 +100,8 @@ D)问题：为了解决不同服务受众对于直播软件界面的颜色、样
 
 ### 正在开发的功能
 
-**1.** 基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出
+**1.** 基于Markdown的笔记内容的导出功能，提供Word、PDF等多种格式的导出 （已完成）
 
-**2.** 对产品使用问题的一键实时反馈
+**2.** 对产品使用问题的一键实时反馈 （已完成）
 
-**3.** 对授课人提供的学习网站进行一键收藏
+**3.** 对授课人提供的学习网站进行一键收藏 
