--- a/docs/01.one/软件使用指南.md
+++ b/docs/01.one/软件使用指南.md
@@ -10,7 +10,7 @@ permalink: /pages/24768e/
 - 上课学习、工作培训，直播过程记下笔记让你学到更多
 - 截图识字让你花更少时间记笔记，更多时间专注直播
 - 使用简洁强大的markdown帮助你更好地记笔记
-- 支持导出功能，一键保存你的知识记录（功能开发中）
+- 支持导出功能，一键保存你的知识记录
 
 ## 安装依赖
 
@@ -25,14 +25,15 @@ permalink: /pages/24768e/
    ```
 
    > 因为我在代码中用到了一些非常毒瘤的绝对路径，大家也可以手动将其更改而避免路径错误。
+   可以查找代码中所有的 ```D:\electron\electron-quick-start-master\```并将其替换为相对路径或者你的路径
 
-   
 
-- 使用npm运行应用
 
 ```shell
 npm install
 ```
+
+## 运行
 
 ```shell
 npm start
@@ -52,29 +53,204 @@ npm start
 
 直播中各个功能按键在官方文档中已有详细说明，我们主要介绍我们设计的特色功能：
 
-1. 笔记功能
+1. **笔记功能**
 
    点击小工具栏的笔记框，页面会从上下左右中的一边打开笔记框。小工具栏中也有设置默认打开笔记框位置的按钮。
 
-2. 截图识字功能
+2. **截图识字功能**
 
-   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”和“识别”三个按钮分别代表着关闭截图框，保存截图到剪贴板和识别截图中的文字内容并保存到剪贴板。
+   使用快捷键 **ctrl+shift+v**，屏幕出现画布，点击鼠标开始截图的左上坐标，拖拽鼠标完成截图。截图完成后小工具栏有“关闭”，“确认”，“识别”和“翻译”四个按钮分别代表着关闭截图框、保存截图到剪贴板、识别截图中的文字内容并保存到剪贴板和翻译图片中的文字并保存到剪切板。
 
-3. 搜索功能
+3. **搜索功能**
 
    我们工具栏中提供了两个快捷搜索引擎百度和必应来帮助用户得到更好的笔记体验。
 
-4. 换肤功能
+4. **换肤功能**
 
    点击右上角的切换按钮可以切换日间和夜晚两种主题。
 
 
 
+## 注意事项
+#### 识字
+软件使用的识字功能依赖于旷视通用文字识别API(v2)，请确保截图尺寸**最小100 * 100px**，最大4096 * 4096px,且图片不大于7MB。
+
+#### 翻译
+软件使用的翻译功能依赖于有道智云的API，支持源语言到目标语言的自动识别
+点击翻译按钮后有时出现不会自动关闭窗口的情况，此时翻译工作已完成，可按esc键或点击关闭关闭窗口，这个功能没完善好，我们将会继续修改。
+
+
 ## 帮助与反馈
 
-设计之初仍有许多不足之处，请多多批评指正，欢迎大家在右上角的留言板留下你的评论和对应用的宝贵建议！
+设计之初仍有许多不足之处，请多多批评指正，欢迎大家在右上角的留言板或软件的意见反馈中留下你的评论和对应用的宝贵建议！
 
 
+## 附录
+### markdown语法 
+> 以下为在软件中的使用方法，其他地方并不通用，详见网站 http://www.mavoneditor.com/
 
+目录
+Markdown 语法简介
+**目录**
+**粗体**
+*斜体*
+标题
+分割线
+^上^角~下~标
+++下划线++ ~~中划线~~
+==标记==
+段落引用
+列表
+任务列表
+链接
+代码段落
+表格(table)
+脚注(footnote)
+表情(emoji)
+$\KaTeX$公式
+布局
+定义
+abbr
+Markdown 语法简介
+语法详解
+
+目录
+@[toc](目录)
+粗体
+**粗体**
+__粗体__
+斜体
+*斜体*
+_斜体_
+标题
+# 一级标题 #
+一级标题
+====
+## 二级标题 ##
+二级标题
+----
+### 三级标题 ###
+#### 四级标题 ####
+##### 五级标题 #####
+###### 六级标题 ######
+分割线
+***
+---
+上角下标
+上角标 x^2^
+下角标 H~2~0
+下划线 中划线
+++下划线++
+~~中划线~~
+标记
+==标记==
+段落引用
+> 一级
+>> 二级
+>>> 三级
+...
+列表
+有序列表
+1.
+2.
+3.
+...
+无序列表
+-
+-
+...
+任务列表
+ 已完成任务
+ 未完成任务
+- [x] 已完成任务
+- [ ] 未完成任务
+链接
+[链接](www.baidu.com)
+![图片描述](http://www.image.com)
+代码段落
+``` type
+
+代码段落
+
+```
+
+` 代码块 `
+
+int main()
+{
+    printf("hello world!");
+}
+code
+
+表格(table)
+| 标题1                  |     标题2     |             标题3 |
+| :--------------------- | :-----------: | ----------------: |
+| 左对齐                 |     居中      |            右对齐 |
+| ---------------------- | ------------- | ----------------- |
+标题1	标题2	标题3
+左对齐	居中	右对齐
+----------------------	-------------	-----------------
+脚注(footnote)
+hello[^hello]
+见底部脚注[1]
+
+表情(emoji)
+参考网站: https://www.webpagefx.com/tools/emoji-cheat-sheet/
+
+:laughing:
+:blush:
+:smiley:
+:)
+...
+😆😊😃😃
+
+$\KaTeX$公式
+我们可以渲染公式例如：$x_i + y_i = z_i$和$\sum_{i=1}^n a_i=0$
+我们也可以单行渲染
+$$\sum_{i=1}^n a_i=0$$
+具体可参照katex文档和katex支持的函数以及latex文档
+
+布局
+::: hljs-left
+居左
+:::
+
+::: hljs-center
+居中
+:::
+
+::: hljs-right
+居右
+:::
+
+定义
+术语一
+定义一
+
+包含有行内标记的术语二
+定义二
+
+  {一些定义二的文字或代码}
+定义二的第三段
+
+术语一
+
+:   定义一
+
+包含有*行内标记*的术语二
+
+:   定义二
+
+        {一些定义二的文字或代码}
+
+    定义二的第三段
+
+abbr
+HTML 规范由 W3C 维护
+
+*[HTML]: Hyper Text Markup Language
+*[W3C]:  World Wide Web Consortium
+HTML 规范由 W3C 维护
+一个注脚 ↩︎
 
 
