add screenshot note

--- a/docs/01.one/软件使用指南.md
+++ b/docs/01.one/软件使用指南.md
@@ -79,6 +79,8 @@ npm start
 软件使用的翻译功能依赖于有道智云的API，支持源语言到目标语言的自动识别
 点击翻译按钮后有时出现不会自动关闭窗口的情况，此时翻译工作已完成，可按esc键或点击关闭关闭窗口，这个功能没完善好，我们将会继续修改。
 
+#### 截图
+仅允许一个截图窗口，若使用截图快捷键后无响应请检查是否已经开启了截图窗口
 
 ## 帮助与反馈
 
