--- a/docs/01.one/软件使用指南.md
+++ b/docs/01.one/软件使用指南.md
@@ -89,7 +89,7 @@ npm start
 
 ## 附录
 ### markdown语法 
-> 以下为在软件中的使用方法，其他地方并不通用，详见网站 http://www.mavoneditor.com/
+> 以下为在软件中的使用方法，其他地方并不通用，详见网站 <a href="http://www.mavoneditor.com/">mavoneditor</a>
 
 目录
 Markdown 语法简介
